projects/maison/src/apps/linkding/linkding.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: linkding-websecure
  namespace: linkding
spec:
  parentRefs:
    - name: default
      namespace: default
  hostnames:
    - bookmarks.chezmoi.sh
  rules:
    - backendRefs:
        - name: linkding
          port: 80
